[gd_scene load_steps=4 format=3 uid="uid://b6w454vc7pibg"]

[ext_resource type="Script" path="res://control.tres.gd" id="1_wptue"]
[ext_resource type="Script" path="res://LocalIp.gd" id="2_nsxh3"]
[ext_resource type="Script" path="res://PlayerList.cs" id="3_q6u1x"]

[node name="Control" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_wptue")

[node name="MainContainer" type="Panel" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="ProcessingSection" type="Node" parent="MainContainer"]

[node name="DestLabel" type="Label" parent="MainContainer/ProcessingSection"]
offset_left = 79.0
offset_top = 524.0
offset_right = 182.0
offset_bottom = 547.0
text = "Destination >"

[node name="YourIPLabel" type="Label" parent="MainContainer/ProcessingSection"]
offset_left = 115.0
offset_top = 290.0
offset_right = 178.0
offset_bottom = 313.0
text = "Your's >"

[node name="Host" type="Button" parent="MainContainer/ProcessingSection"]
offset_left = 96.0
offset_top = 136.0
offset_right = 461.0
offset_bottom = 270.0
text = "Host
"

[node name="Join" type="Button" parent="MainContainer/ProcessingSection"]
offset_left = 96.0
offset_top = 361.0
offset_right = 461.0
offset_bottom = 495.0
text = "Join
"

[node name="LocalIp" type="LineEdit" parent="MainContainer/ProcessingSection"]
offset_left = 197.0
offset_top = 289.0
offset_right = 461.0
offset_bottom = 320.0
editable = false
expand_to_text_length = true
script = ExtResource("2_nsxh3")

[node name="TargetIp" type="LineEdit" parent="MainContainer/ProcessingSection"]
offset_left = 199.0
offset_top = 520.0
offset_right = 463.0
offset_bottom = 551.0
placeholder_text = "IP Address"
expand_to_text_length = true

[node name="NameLabel" type="Label" parent="MainContainer"]
offset_left = 13.0
offset_top = 25.0
offset_right = 126.0
offset_bottom = 48.0
text = "Player Name >"

[node name="PlayerName" type="LineEdit" parent="MainContainer"]
offset_left = 139.0
offset_top = 24.0
offset_right = 240.0
offset_bottom = 55.0
text = "Noob"
placeholder_text = "Enter Name"
max_length = 20
expand_to_text_length = true

[node name="PeopleContainer" type="Panel" parent="."]
layout_mode = 1
anchors_preset = -1
anchor_right = 0.4
anchor_bottom = 0.5
offset_left = 624.0
offset_top = 117.0
offset_right = 624.0
offset_bottom = 117.0
grow_horizontal = 0
grow_vertical = 2

[node name="PlayerList" type="VBoxContainer" parent="PeopleContainer"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("3_q6u1x")

[node name="PeopleLabel" type="Label" parent="PeopleContainer"]
offset_left = 33.0
offset_top = -45.0
offset_right = 96.0
offset_bottom = -22.0
text = "People"

[node name="Start" type="Button" parent="PeopleContainer"]
visible = false
offset_left = 114.0
offset_top = -70.0
offset_right = 462.0
offset_bottom = -12.0
text = "Start
"

[node name="Leave" type="Button" parent="PeopleContainer"]
visible = false
layout_mode = 0
offset_left = -69.0
offset_top = 6.0
offset_right = -16.0
offset_bottom = 320.0
text = "Leave"

[connection signal="padd" from="." to="PeopleContainer/PlayerList" method="_on_control_padd"]
[connection signal="pressed" from="MainContainer/ProcessingSection/Host" to="." method="_on_host_pressed"]
[connection signal="pressed" from="MainContainer/ProcessingSection/Join" to="." method="_on_join_pressed"]
[connection signal="pressed" from="PeopleContainer/Leave" to="." method="_on_leave_pressed"]
